# Lesson13_part2_Django_pass_reset

./: dev-compose.yaml  manage.py  migratemongo.py  pyproject.toml
quotes_app/: forms.py  models.py  urls.py  views.py
quotes_app/migrations/: 0001_initial.py
quotes_app/templates/: add_author.html  add_quote.html  author_detail.html  author_update.html  authors.html  base.html  index.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  quotes.html
quotes_project/: asgi.py  settings.py  urls.py  wsgi.py
