[tool.poetry]
name = "lesson10"
version = "0.1.0"
description = ""
authors = ["Nataly"]
[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
Django = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


